--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@ body {
     font-family: 'Ropa Sans', sans-serif;
     line-height: 2;
     text-align: center;
+    overflow-x: hidden;
 }
 
 #page-wrapper {
