added a .matchMeadia function in main.js to kill all GSAP animations on screen sizes below 1200px

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -49,6 +49,10 @@ MEDIA QUERIES
         align-content: center;
     }
 
+    a.nav-link {
+        width: auto;
+        overflow-x: hidden;
+    }
 
     .new-products-image,
     .laptops-image,
