--- a/css/styles.css
+++ b/css/styles.css
@@ -151,6 +151,7 @@ h2:after {
     grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
     grid-gap: 4rem;
     width: 100%;
+    height: auto;
     max-width: 1280px;
     margin: 0 auto 2rem;
     grid: auto-flow;
@@ -214,6 +215,7 @@ h2:after {
     grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
     grid-gap: 4rem;
     width: 100%;
+    height: auto;
     max-width: 1280px;
     margin: 0 auto 2rem;
     grid: auto-flow;
@@ -277,6 +279,7 @@ h2:after {
     grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
     grid-gap: 4rem;
     width: 100%;
+    height: auto;
     max-width: 1280px;
     margin: 0 auto 2rem;
     grid: auto-flow;
